Update code to use recent language features.
Closes #881