@@ -106,7 +106,7 @@ public class VaultEndpoint implements Serializable {
 			vaultEndpoint.setPort(uri.getPort() == -1 ? uri.toURL().getDefaultPort() : uri.getPort());
 		}
 		catch (MalformedURLException e) {
-			throw new IllegalArgumentException(String.format("Can't retrieve default port from %s", uri), e);
+			throw new IllegalArgumentException("Can't retrieve default port from %s".formatted(uri), e);
 		}
 		vaultEndpoint.setScheme(uri.getScheme());
 
@@ -191,7 +191,7 @@ public class VaultEndpoint implements Serializable {
 	public void setPath(String path) {
 
 		Assert.hasText(path, "Path must not be null or empty");
-		Assert.isTrue(!path.startsWith("/"), () -> String.format("Path %s must not start with a leading slash", path));
+		Assert.isTrue(!path.startsWith("/"), () -> "Path %s must not start with a leading slash".formatted(path));
 
 		this.path = path;
 	}
@@ -214,16 +214,15 @@ public class VaultEndpoint implements Serializable {
 
 		Assert.hasText(path, "Path must not be empty");
 
-		return String.format("%s://%s:%s/%s/%s", getScheme(), getHost(), getPort(), getPath(), path);
+		return "%s://%s:%s/%s/%s".formatted(getScheme(), getHost(), getPort(), getPath(), path);
 	}
 
 	@Override
 	public boolean equals(Object o) {
 		if (this == o)
 			return true;
-		if (!(o instanceof VaultEndpoint))
+		if (!(o instanceof VaultEndpoint that))
 			return false;
-		VaultEndpoint that = (VaultEndpoint) o;
 		return this.port == that.port && this.host.equals(that.host) && this.scheme.equals(that.scheme)
 				&& this.path.equals(that.path);
 	}
@@ -235,7 +234,7 @@ public class VaultEndpoint implements Serializable {
 
 	@Override
 	public String toString() {
-		return String.format("%s://%s:%d", this.scheme, this.host, this.port);
+		return "%s://%s:%d".formatted(this.scheme, this.host, this.port);
 	}
 
 }
