@@ -117,7 +117,7 @@ class VaultKeyValue1Template extends VaultKeyValueAccessor implements VaultKeyVa
 
 	@Override
 	String createDataPath(String path) {
-		return String.format("%s/%s", this.path, path);
+		return "%s/%s".formatted(this.path, path);
 	}
 
 }
