@@ -87,7 +87,7 @@ public class VaultTransitTemplate implements VaultTransitOperations {
 
 		Assert.hasText(keyName, "Key name must not be empty");
 
-		this.vaultOperations.write(String.format("%s/keys/%s", this.path, keyName), null);
+		this.vaultOperations.write("%s/keys/%s".formatted(this.path, keyName), null);
 	}
 
 	@Override
@@ -96,13 +96,13 @@ public class VaultTransitTemplate implements VaultTransitOperations {
 		Assert.hasText(keyName, "Key name must not be empty");
 		Assert.notNull(createKeyRequest, "VaultTransitKeyCreationRequest must not be empty");
 
-		this.vaultOperations.write(String.format("%s/keys/%s", this.path, keyName), createKeyRequest);
+		this.vaultOperations.write("%s/keys/%s".formatted(this.path, keyName), createKeyRequest);
 	}
 
 	@Override
 	public List<String> getKeys() {
 
-		VaultResponse response = this.vaultOperations.read(String.format("%s/keys?list=true", this.path));
+		VaultResponse response = this.vaultOperations.read("%s/keys?list=true".formatted(this.path));
 
 		return response == null ? Collections.emptyList() : (List) response.getRequiredData().get("keys");
 	}
@@ -113,7 +113,7 @@ public class VaultTransitTemplate implements VaultTransitOperations {
 		Assert.hasText(keyName, "Key name must not be empty");
 		Assert.notNull(keyConfiguration, "VaultKeyConfiguration must not be empty");
 
-		this.vaultOperations.write(String.format("%s/keys/%s/config", this.path, keyName), keyConfiguration);
+		this.vaultOperations.write("%s/keys/%s/config".formatted(this.path, keyName), keyConfiguration);
 	}
 
 	@Override
@@ -124,7 +124,7 @@ public class VaultTransitTemplate implements VaultTransitOperations {
 		Assert.notNull(type, "Key type must not be null");
 
 		VaultResponseSupport<RawTransitKeyImpl> result = this.vaultOperations
-			.read(String.format("%s/export/%s/%s", this.path, type.getValue(), keyName), RawTransitKeyImpl.class);
+			.read("%s/export/%s/%s".formatted(this.path, type.getValue(), keyName), RawTransitKeyImpl.class);
 
 		return result != null ? result.getRequiredData() : null;
 	}
@@ -136,7 +136,7 @@ public class VaultTransitTemplate implements VaultTransitOperations {
 		Assert.hasText(keyName, "Key name must not be empty");
 
 		VaultResponseSupport<VaultTransitKeyImpl> result = this.vaultOperations
-			.read(String.format("%s/keys/%s", this.path, keyName), VaultTransitKeyImpl.class);
+			.read("%s/keys/%s".formatted(this.path, keyName), VaultTransitKeyImpl.class);
 
 		if (result != null) {
 			return result.getRequiredData();
@@ -150,7 +150,7 @@ public class VaultTransitTemplate implements VaultTransitOperations {
 
 		Assert.hasText(keyName, "Key name must not be empty");
 
-		this.vaultOperations.delete(String.format("%s/keys/%s", this.path, keyName));
+		this.vaultOperations.delete("%s/keys/%s".formatted(this.path, keyName));
 	}
 
 	@Override
@@ -158,7 +158,7 @@ public class VaultTransitTemplate implements VaultTransitOperations {
 
 		Assert.hasText(keyName, "Key name must not be empty");
 
-		this.vaultOperations.write(String.format("%s/keys/%s/rotate", this.path, keyName), null);
+		this.vaultOperations.write("%s/keys/%s/rotate".formatted(this.path, keyName), null);
 	}
 
 	@Override
@@ -171,7 +171,7 @@ public class VaultTransitTemplate implements VaultTransitOperations {
 
 		request.put("plaintext", Base64.getEncoder().encodeToString(plaintext.getBytes()));
 
-		return (String) this.vaultOperations.write(String.format("%s/encrypt/%s", this.path, keyName), request)
+		return (String) this.vaultOperations.write("%s/encrypt/%s".formatted(this.path, keyName), request)
 			.getRequiredData()
 			.get("ciphertext");
 	}
@@ -200,7 +200,7 @@ public class VaultTransitTemplate implements VaultTransitOperations {
 
 		applyTransitOptions(transitContext, request);
 
-		return (String) this.vaultOperations.write(String.format("%s/encrypt/%s", this.path, keyName), request)
+		return (String) this.vaultOperations.write("%s/encrypt/%s".formatted(this.path, keyName), request)
 			.getRequiredData()
 			.get("ciphertext");
 	}
@@ -226,7 +226,7 @@ public class VaultTransitTemplate implements VaultTransitOperations {
 			batch.add(vaultRequest);
 		}
 
-		VaultResponse vaultResponse = this.vaultOperations.write(String.format("%s/encrypt/%s", this.path, keyName),
+		VaultResponse vaultResponse = this.vaultOperations.write("%s/encrypt/%s".formatted(this.path, keyName),
 				Collections.singletonMap("batch_input", batch));
 
 		return toBatchResults(vaultResponse, batchRequest, Plaintext::getContext);
@@ -242,8 +242,7 @@ public class VaultTransitTemplate implements VaultTransitOperations {
 
 		request.put("ciphertext", ciphertext);
 
-		String plaintext = (String) this.vaultOperations
-			.write(String.format("%s/decrypt/%s", this.path, keyName), request)
+		String plaintext = (String) this.vaultOperations.write("%s/decrypt/%s".formatted(this.path, keyName), request)
 			.getRequiredData()
 			.get("plaintext");
 
@@ -274,8 +273,7 @@ public class VaultTransitTemplate implements VaultTransitOperations {
 
 		applyTransitOptions(transitContext, request);
 
-		String plaintext = (String) this.vaultOperations
-			.write(String.format("%s/decrypt/%s", this.path, keyName), request)
+		String plaintext = (String) this.vaultOperations.write("%s/decrypt/%s".formatted(this.path, keyName), request)
 			.getRequiredData()
 			.get("plaintext");
 
@@ -303,7 +301,7 @@ public class VaultTransitTemplate implements VaultTransitOperations {
 			batch.add(vaultRequest);
 		}
 
-		VaultResponse vaultResponse = this.vaultOperations.write(String.format("%s/decrypt/%s", this.path, keyName),
+		VaultResponse vaultResponse = this.vaultOperations.write("%s/decrypt/%s".formatted(this.path, keyName),
 				Collections.singletonMap("batch_input", batch));
 
 		return toDecryptionResults(vaultResponse, batchRequest);
@@ -318,7 +316,7 @@ public class VaultTransitTemplate implements VaultTransitOperations {
 		Map<String, String> request = new LinkedHashMap<>();
 		request.put("ciphertext", ciphertext);
 
-		return (String) this.vaultOperations.write(String.format("%s/rewrap/%s", this.path, keyName), request)
+		return (String) this.vaultOperations.write("%s/rewrap/%s".formatted(this.path, keyName), request)
 			.getRequiredData()
 			.get("ciphertext");
 	}
@@ -332,7 +330,7 @@ public class VaultTransitTemplate implements VaultTransitOperations {
 
 		Map<String, String> request = createRewrapRequest(toCiphertext(ciphertext, transitContext));
 
-		return (String) this.vaultOperations.write(String.format("%s/rewrap/%s", this.path, keyName), request)
+		return (String) this.vaultOperations.write("%s/rewrap/%s".formatted(this.path, keyName), request)
 			.getRequiredData()
 			.get("ciphertext");
 	}
@@ -351,7 +349,7 @@ public class VaultTransitTemplate implements VaultTransitOperations {
 			batch.add(vaultRequest);
 		}
 
-		VaultResponse vaultResponse = this.vaultOperations.write(String.format("%s/rewrap/%s", this.path, keyName),
+		VaultResponse vaultResponse = this.vaultOperations.write("%s/rewrap/%s".formatted(this.path, keyName),
 				Collections.singletonMap("batch_input", batch));
 
 		return toBatchResults(vaultResponse, batchRequest, Ciphertext::getContext);
@@ -376,7 +374,7 @@ public class VaultTransitTemplate implements VaultTransitOperations {
 
 		Map<String, Object> request = toRequestBody(hmacRequest);
 
-		String hmac = (String) this.vaultOperations.write(String.format("%s/hmac/%s", this.path, keyName), request)
+		String hmac = (String) this.vaultOperations.write("%s/hmac/%s".formatted(this.path, keyName), request)
 			.getRequiredData()
 			.get("hmac");
 
@@ -416,7 +414,7 @@ public class VaultTransitTemplate implements VaultTransitOperations {
 
 		Map<String, Object> request = toRequestBody(signRequest);
 
-		String signature = (String) this.vaultOperations.write(String.format("%s/sign/%s", this.path, keyName), request)
+		String signature = (String) this.vaultOperations.write("%s/sign/%s".formatted(this.path, keyName), request)
 			.getRequiredData()
 			.get("signature");
 
@@ -457,8 +455,7 @@ public class VaultTransitTemplate implements VaultTransitOperations {
 
 		Map<String, Object> request = toRequestBody(verificationRequest);
 
-		Map<String, Object> response = this.vaultOperations
-			.write(String.format("%s/verify/%s", this.path, keyName), request)
+		Map<String, Object> response = this.vaultOperations.write("%s/verify/%s".formatted(this.path, keyName), request)
 			.getRequiredData();
 
 		if (response.containsKey("valid") && Boolean.valueOf("" + response.get("valid"))) {
@@ -818,9 +815,8 @@ public class VaultTransitTemplate implements VaultTransitOperations {
 		public boolean equals(Object o) {
 			if (this == o)
 				return true;
-			if (!(o instanceof VaultTransitKeyImpl))
+			if (!(o instanceof VaultTransitKeyImpl that))
 				return false;
-			VaultTransitKeyImpl that = (VaultTransitKeyImpl) o;
 			return this.allowPlaintextBackup == that.allowPlaintextBackup
 					&& this.deletionAllowed == that.deletionAllowed && this.derived == that.derived
 					&& this.exportable == that.exportable && this.latestVersion == that.latestVersion
@@ -877,9 +873,8 @@ public class VaultTransitTemplate implements VaultTransitOperations {
 		public boolean equals(Object o) {
 			if (this == o)
 				return true;
-			if (!(o instanceof RawTransitKeyImpl))
+			if (!(o instanceof RawTransitKeyImpl that))
 				return false;
-			RawTransitKeyImpl that = (RawTransitKeyImpl) o;
 			return this.keys.equals(that.keys) && Objects.equals(this.name, that.name);
 		}
 
